<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FSM Simulator</string>
    <string name="action_settings">Settings</string>
    <string name="automatentyp">Automatentyp</string>
    <string name="ein_und_ausgang">Eingänge und Ausgaben</string>
    <string name="start">3. Start</string>
    <string name="btn_start">Start</string>
    <string name="screen_graph">Automaten Ansicht</string>
    <string name="settings_save">Speichern</string>
    <string name="popup_save">Speichern?</string>
    <string name="settings_load">Laden</string>
    <string name="create">Erstellen</string>
    <string name="delete">Löschen</string>
    <string name="settings_cancel">Abbrechen</string>
    <string name="settings_simulation">Simulieren</string>
    <string name="settings_closeSimu">Simulieren schließen</string>
    <string name="settings_new">Neu</string>
    <string name="settings_table">Übergangstabelle</string>
    <string name="settings_closeTable">Tabelle schließen</string>
    <string name="settings_share">Automat Teilen</string>
    <string name="settings_grit">Gitter</string>
    <string name="settings_about">Über</string>
    <string name="transition_table">Transitiontabelle</string>
    <string name="save_dataname">Dateiname</string>
    <string name="type_moore">Moore</string>
    <string name="type_mealy">Mealy</string>
    <string name="name_state">Zustandsname</string>
    <string name="output_state">Output State</string>
    <string name="cB_start">Startzustand</string>
    <string name="cB_end">Endzustand</string>
    <string name="input">Eingänge</string>
    <string name="output">Ausgabe</string>
    <string name="ausgaenge">Ausgabe</string>
    <string name="x1">x1</string>
    <string name="x2">x2</string>
    <string name="x3">x3</string>
    <string name="takt">Takt</string>
    <string name="popup_load">Laden</string>
    <string name="msg_new_machine">Neuer Automat!</string>
    <string name="msg_back_to_main">Zurück zum Auswahl Menu? Alles nicht gespeicherte geht verloren!</string>
    <string name="msg_warning_newtable">Sicher? Alles nicht gespeicherte geht verloren!</string>
    <string name="msg_wrong_dataname">Dateinamen eingeben!</string>
    <string name="msg_no_sdCard">Keine SD Karte vorhanden</string>
    <string name="msg_file_saved">wurde gespeichert!</string>
    <string name="msg_error_save">Fehler beim Speicher</string>
    <string name="msg_nofiles_forsave">Keine gepeicherten Dateien verfügbar</string>
    <string name="msg_delete">Loeschen erfolgreich</string>
    <string name="msg_delete_canceled">Loeschen fehlgeschlagen</string>
    <string name="msg_set_start_state">Bitte Startzustand setzten</string>
    <string name="msg_state_needs_name">Zustand braucht einen Namen!</string>
    <string name="msg_state_inUse">Eingang bereits vergeben!</string>
    <string name="msg_about_autoren">Entwickler: Eduard Martian und Maxim Lück</string>
    <string name="msg_version">Version: 1.1</string>
    <string name="msg_auftrag">Universität Kassel: Prof. Dr.-Ing. Peter Zipf</string>
    
    
</resources>
