<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <EditText
        android:id="@+id/eT_dataname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_save"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/btn_cancel"
        android:ems="10"
        android:hint="@string/save_dataname"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/eT_dataname"
        android:layout_centerVertical="true"
        android:onClick="btnOnCLickSave"
        android:text="@string/settings_save" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eT_dataname"
        android:layout_marginLeft="23dp"
        android:layout_toRightOf="@+id/btn_save"
        android:onClick="btnOnCLickCancel"
        android:text="@string/settings_cancel" />

</RelativeLayout>