<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/eT_eingang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv_eingang"
        android:layout_toLeftOf="@+id/btn_create"
        android:ems="10" android:inputType="text"/>

    <EditText
        android:id="@+id/eT_ausgang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tv_eingang"
        android:layout_toRightOf="@+id/btn_create"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eT_ausgang"
        android:layout_centerHorizontal="true"
        android:text="@string/create" />

    <TextView
        android:id="@+id/tv_eingang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:text="@string/input"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_ausgang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/eT_ausgang"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:text="@string/output"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
